# scrap_management

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
scrap_management/: __init__.py  hooks.py  modules.txt
scrap_management/scrap_management/: __init__.py
scrap_management/scrap_management/doctype/scrap_entry/: scrap_entry.js  scrap_entry.json  scrap_entry.py
scrap_management/scrap_management/doctype/scrap_entry_item/: scrap_entry_item.json  scrap_entry_item.py
