[project]
name = "scrap_management"
version = "0.0.1"
description = "Scrap Management for ERPNext"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "scrap_management"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0-dev,<17.0.0-dev"
